num_enum/tests/try_build/nightly/compile_fail/multiple_catch_all_same_variant.stderr
error: Multiple variants marked with `#[num_enum(catch_all)]`
 --> tests/try_build/nightly/compile_fail/multiple_catch_all_same_variant.rs:8:16
  |
8 |     #[num_enum(catch_all)]
  |                ^^^^^^^^^
